# ldak

./: .gitignore  CMakeLists.txt  README.md  append.c  blup.c  boltbayesr.c  combine.c  concat.c  condense.c  consistent.c  cors.c  dataops.c  declare.c  decomp.c  defaults.c  elastic.c  erfcx.c  exps.c  fast.c  filedata.c  filekins.c  filemain.c  filter.c  finding.c  gamma.c  genefuns.c  genes.c  getnums.c  grid.c  he.c  jackknife.c  join.c  kinfuns.c  kins.c  ldak.c  lites.c  merge.c  mode.c  nm_gamma.c  nmath.h  (+40 more)
libs/: README.md
